# floating-duration

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
examples/: basic.rs
floating_duration/: TimeAsFloat.t.html  TimeFormat.t.html  index.html  sidebar-items.js  struct.TimeFormat.html  trait.TimeAsFloat.html
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/floating_duration/: trait.TimeAsFloat.js
src/: lib.rs
src/floating_duration/: lib.rs.html
